# folder-locker

./: .gitattributes  .gitignore  AGENTS.md  README.ja.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: open-source-audit.md
resources/: folder-locker-version.txt
scripts/: build.ps1  entry_folder_locker.py
src/folder_locker/: __init__.py  app.py  core.py
src/utility_suite/: __init__.py  meta.py  settings.py
tests/: run_ui_smoke.ps1  test_folder_locker.py
